# DeepSlides

./: .env.example  .gitignore  0.11.6  README.md  README_zh.md  chapter_cover.pptx  langgraph.json  pyproject.toml
SlideDesign/: fos_ppt_topics.csv
SlideDesign/topics/2D Materials Beyond Graphene/: final_report.md
SlideDesign/topics/3D Printing in Construction/: final_report.md
SlideDesign/topics/3D-Printed Prosthetic Design/: final_report.md
SlideDesign/topics/5G_6G Antenna Engineering/: final_report.md
SlideDesign/topics/AI Adoption in Finance Operations/: final_report.md
SlideDesign/topics/AI Models of Human Cognition/: final_report.md
SlideDesign/topics/AI Regulation and Law/: final_report.md
SlideDesign/topics/AI Tutors and Learning Outcomes/: final_report.md
SlideDesign/topics/AI-Assisted Diagnostics in Radiology/: final_report.md
SlideDesign/topics/AI-Driven Protein Engineering/: final_report.md
SlideDesign/topics/AI-Generated Content Ethics/: final_report.md
SlideDesign/topics/Additive Manufacturing Standards/: final_report.md
SlideDesign/topics/Advanced Wastewater Treatment/: final_report.md
SlideDesign/topics/Aeroelasticity in Wind Turbines/: final_report.md
SlideDesign/topics/Affordable Biologics Production/: final_report.md
SlideDesign/topics/Ag-Policy and Food Security/: final_report.md
SlideDesign/topics/Aging Population Social Support/: final_report.md
SlideDesign/topics/Aging Society Health Challenges/: final_report.md
SlideDesign/topics/Agri-Robotics Field Deployment/: final_report.md
SlideDesign/topics/Agricultural Waste Valorization/: final_report.md
pptx_tools/: LICENSE  README.md  pyproject.toml
pptx_tools/src/pptx_tools/: __init__.py  add_free_shape.py  design2ppt.py
src/open_deep_research/: __init__.py  configuration.py  graph.ipynb  graph.py  graph_sequential.py  multi_agent.ipynb  multi_agent.py  prompts.py  run.py  state.py  utils.py
tests/: conftest.py  run_test.py  test_report_quality.py
(+9867 files in other folders)
